--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,6 +4,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Initializing Colab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Installing pytorch_xla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!curl https://raw.githubusercontent.com/pytorch/xla/master/contrib/scripts/env-setup.py -o pytorch-xla-env-setup.py\n",
+    "!python pytorch-xla-env-setup.py --version nightly --apt-packages libomp5 libopenblas-dev"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Installing dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Importing dependencies"
    ]
   },
@@ -32,7 +72,7 @@
    "outputs": [],
    "source": [
     "config = load_config_data('./config.yaml')\n",
-    "datamodule = LyftDataModule('<data_path>', config)\n",
+    "datamodule = LyftDataModule('/Users/vahidzee/Desktop/lyft_data', config)\n",
     "model = BaseResnet(\n",
     "    in_channels = ( config[\"model_params\"][\"history_num_frames\"] + 1) * 2 + 3,\n",
     "    out_dim = 2 * config[\"model_params\"][\"future_num_frames\"],\n",
@@ -88,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
