update notebook for tpu training update requirements

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Installing dependencies"
+    "Downloading data"
    ]
   },
   {
@@ -37,7 +37,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -r requirements.txt"
+    "!wget https://lyft-l5-datasets-public.s3-us-west-2.amazonaws.com/prediction/v1.1/{sample.tar,aerial_map.tar,semantic_map.tar}\n",
+    "!mkdir -p lyft/scenes/ lyft/aerial_map/ lyft/semantic_map/\n",
+    "!tar -xf sample.tar sample.zarr && mv sample.zarr lyft/scenes/ && rm sample.tar\n",
+    "!tar -xf aerial_map.tar -C lyft/ && rm aerial_map.tar\n",
+    "!tar -xf semantic_map.tar meta.json && mv meta.json lyft/\n",
+    "!tar -xf semantic_map.tar semantic_map.pb && mv semantic_map.pb lyft/semantic_map/ && rm semantic_map.tar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cloning repository and installing dependencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/VahidZee/ReasonAwareRasterizedTrajectoryPrediction.git\n",
+    "cd ReasonAwareRasterizedTrajectoryPrediction\n",
+    "pip install -r requirements.txt"
    ]
   },
   {
@@ -89,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer = pl.Trainer()"
+    "trainer = pl.Trainer(tpus=8)"
    ]
   },
   {
