--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,19 +91,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = load_config_data('/Users/vahidzee/Desktop/EPFL/raster/raster-git/config.yaml')\n",
-    "datamodule = LyftDataModule('/Users/vahidzee/Desktop/lyft_data/', config)\n",
+    "config = load_config_data('./config.yaml')\n",
+    "datamodule = LyftDataModule('/Users/sana/Desktop/dataset_lyft/', config)\n",
     "training_procedure = BaseTrainerModule(config)\n",
     "training_procedure.datamodule = datamodule"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,28 +112,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running in fast_dev_run mode: will run a full train, val and test loop using a single batch\n",
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n"
+     ]
+    }
+   ],
    "source": [
-    "trainer = pl.Trainer(limit_train_batches=2, limit_val_batches=2, checkpoint_callback=checkpointing, **config['train_params'].get('trainer', dict()), )"
+    "trainer = pl.Trainer(fast_dev_run = True,max_epochs = 5,limit_train_batches=2, limit_val_batches=2, checkpoint_callback=checkpointing, **config['train_params'].get('trainer', dict()), )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/sh: line 0: kill: (12111) - No such process\r\n"
+     ]
+    }
+   ],
    "source": [
-    "%load_ext tensorboard\n",
-    "%tensorboard --logdir=lightning_logs\n"
+    "!kill 12111"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "meta.json is not present in local data folder /Users/sana/Desktop/dataset_lyft\n",
+      "!!dataset metafile not found!! the hard-coded matrix will be loaded.\n",
+      "This will be deprecated in future releases\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pytorch_lightning/utilities/distributed.py:37: UserWarning: Could not log computational graph since the `model.example_input_array` attribute is not set or `input_array` was not given\n",
+      "  warnings.warn(*args, **kwargs)\n",
+      "\n",
+      "  | Name      | Type       | Params\n",
+      "-----------------------------------------\n",
+      "0 | model     | BaseResnet | 23 M  \n",
+      "1 | criterion | MSELoss    | 0     \n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pytorch_lightning/utilities/distributed.py:37: UserWarning: The dataloader, train dataloader, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  warnings.warn(*args, **kwargs)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pytorch_lightning/utilities/distributed.py:37: UserWarning: The dataloader, val dataloader 0, does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` (try 8 which is the number of cpus on this machine) in the `DataLoader` init to improve performance.\n",
+      "  warnings.warn(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8e71e554d34c419fb7a50357c935f71e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', description='Training', layout=Layout(flex='2'), max…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', description='Validating', layout=Layout(flex='2'), m…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "here\n",
+      "0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/captum/attr/_utils/gradient.py:33: UserWarning: Input Tensor 0 did not already require gradients, required_grads has been set automatically.\n",
+      "  \"required_grads has been set automatically.\" % index\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "here\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pytorch_lightning/utilities/distributed.py:37: UserWarning: \n",
+      "                    When using EvalResult(early_stop_on=X) or TrainResult(early_stop_on=X) the\n",
+      "                    'monitor' key of ModelCheckpoint has no effect.\n",
+      "                    Remove ModelCheckpoint(monitor='loss/val) to fix')\n",
+      "                \n",
+      "  warnings.warn(*args, **kwargs)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pytorch_lightning/utilities/distributed.py:37: RuntimeWarning: The metric you returned None must be a `torch.Tensor` instance, checkpoint not saved HINT: what is the value of loss/val in validation_epoch_end()?\n",
+      "  warnings.warn(*args, **kwargs)\n",
+      "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/pytorch_lightning/utilities/distributed.py:37: RuntimeWarning: Can save best model only with loss/val available, skipping.\n",
+      "  warnings.warn(*args, **kwargs)\n",
+      "Saving latest checkpoint..\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trainer.fit(training_procedure)"
    ]
